<resources>
    <string name="app_name">CarCool</string>
    <string name="profile">Profile</string>
    <string name="user_name">Khushi Mahawar</string>
    <string name="user_type">Newcomer</string>
    <string name="user_profile_verify">Verify your profile</string>
    <string name="user_profile_verify_id">Verify my ID</string>
    <string name="user_profile_phone">+91 9785182311</string>
    <string name="user_profile_email">mahawarkhushi3@gmail.com</string>
    <string name="user_profile_about">About you</string>
    <string name="user_profile_write_bio">Write my mini bio</string>
    <string name="user_profile_preferences">Add my preferences</string>
    <string name="custom_dialog">Add Mini Bio</string>
    <string name="name">Write your bio here</string>
    <string name="submit">Submit</string>
    <string name="landing_page_password">Already have an account?</string>
    <string name="price_per_seat_publish">Edit price per seat.</string>
    <string name="no_of_passenger_publish">So how many CarCool passengers can you take ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>